<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="tv">TextView</string>
    <string name="share">Share</string>
    <string name="contDescrip">This is the ImageView</string>
    <string name="Arts">Arts</string>
    <string name="FashionAndStyle">Fashion &amp; Style</string>
    <string name="Sports">Sports</string>
    <string name="NewsDeskValues">News Desk Values</string>
    <string name="BeginDate">Begin Date</string>
    <string name="date">Type date here...</string>
    <string name="SortOrder">Sort Order</string>
    <string name="SaveFilter">Save</string>

    <string-array name="spinnerOptions">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

</resources>

<!-- to give spinner options...

-->
