<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caguillon.nytimessearch.activities.FilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewsDeskValues"
        android:id="@+id/tvNewsDeskValues"
        android:layout_above="@+id/cbFashionAndStyle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Arts"
        android:id="@+id/cbArts"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnSaveFilter"
        android:layout_alignEnd="@+id/btnSaveFilter" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FashionAndStyle"
        android:id="@+id/cbFashionAndStyle"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sports"
        android:id="@+id/cbSports"
        android:checked="false"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/cbFashionAndStyle"
        android:layout_alignLeft="@+id/cbFashionAndStyle"
        android:layout_alignStart="@+id/cbFashionAndStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BeginDate"
        android:id="@+id/tvBeginDate"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_alignBaseline="@+id/tvSort"
        android:layout_alignBottom="@+id/tvSort"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SortOrder"
        android:id="@+id/tvSort"
        android:layout_below="@+id/tvBeginDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etDate"
        android:layout_alignLeft="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:layout_alignBottom="@+id/tvBeginDate"
        android:textIsSelectable="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveFilter"
        android:onClick="onSubmit"
        android:id="@+id/btnSaveFilter"
        android:layout_below="@+id/cbSports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

</RelativeLayout>

<!-- In spinner
        android:entries="@string/spinnerOptions"
-->
